create block ui

--- a/angular/src/app/product/product.component.html
+++ b/angular/src/app/product/product.component.html
@@ -54,5 +54,7 @@
     <p-paginator [rows]="maxResultCount" [totalRecords]="(listPaging$ | async)?.totalCount"
         (onPageChange)="pageChanged($event)" [rowsPerPageOptions]="[10, 20, 30, 50, 100]"></p-paginator>
     <!--Block UI-->
-    <p-blockUI [blocked]="blockedPanel" [target]="pnl"></p-blockUI>
+    <p-blockUI [blocked]="blockedPanel" [target]="pnl">
+        <p-progressSpinner></p-progressSpinner>
+    </p-blockUI>
 </p-panel>
