--- a/angular/src/app/product/product.component.html
+++ b/angular/src/app/product/product.component.html
@@ -2,7 +2,7 @@
     <!--Filter (search panel)-->
     <div class="grid">
         <div class="col-4">
-            <button pButton type="button" icon="fa fa-plus" iconPos="left" label="Thêm mới"></button>
+            <button pButton (click)="showModal()" type="button" icon="fa fa-plus" iconPos="left" label="Thêm mới"></button>
         </div>
         <div class="col-8">
             <div class="formgroup-inline">
