--- a/angular/src/app/product/product-detail/product-detail.component.html
+++ b/angular/src/app/product/product-detail/product-detail.component.html
@@ -4,7 +4,8 @@
         <div class="formgrid grid">
             <div class="field col-12">
                 <label for="name" class="block">Tên <span class="required">*</span></label>
-                <input id="name" pInputText type="text" class="w-full" formControlName="name" />
+                <input id="name" pInputText type="text" (keyup)="generateSlug()" class="w-full"
+                    formControlName="name" />
                 <app-validation-message [entityForm]="form" fieldName="name"
                     [validationMessages]="validationMessages"></app-validation-message>
             </div>
@@ -29,16 +30,14 @@
             <div class="field col-12">
                 <label for="manufacturerId" class="block">Nhà sản xuất <span class="required">*</span></label>
                 <p-dropdown [options]="manufacturers" formControlName="manufacturerId" placeholder="Chọn nhà sản xuất"
-                    optionLabel="name" optionValue="value" [showClear]="true" autoWidth="false"
-                    [style]="{ width: '100%' }"></p-dropdown>
+                    [showClear]="true" autoWidth="false" [style]="{ width: '100%' }"></p-dropdown>
                 <app-validation-message [entityForm]="form" fieldName="manufacturerId"
                     [validationMessages]="validationMessages"></app-validation-message>
             </div>
             <div class="field col-12">
                 <label for="categoryId" class="block">Danh mục <span class="required">*</span></label>
                 <p-dropdown [options]="productCategories" formControlName="categoryId" placeholder="Chọn danh mục"
-                    optionLabel="name" optionValue="value" [showClear]="true" autoWidth="false"
-                    [style]="{ width: '100%' }"></p-dropdown>
+                    [showClear]="true" autoWidth="false" [style]="{ width: '100%' }"></p-dropdown>
                 <app-validation-message [entityForm]="form" fieldName="categoryId"
                     [validationMessages]="validationMessages"></app-validation-message>
             </div>
