--- a/angular/src/app/product/product.component.html
+++ b/angular/src/app/product/product.component.html
@@ -40,8 +40,8 @@
                 <td>{{ row.code }}</td>
                 <td>{{ row.sku }}</td>
                 <td>{{ row.name }}</td>
-                <td>{{ row.productType }}</td>
-                <td>{{ row.categoryId }}</td>
+                <td>{{ getProductType(row.productType) }}</td>
+                <td>{{ row.productCategory.name }}</td>
                 <td>{{ row.sortOrder }}</td>
                 <td>
                     <p-badge *ngIf="row.visibility == 1" severity="success" value="Hiển thị"></p-badge>
